# OsciStudio3D

./: CMakeLists.txt  MainComponent.cpp  MainComponent.h  README.md  ScopeRenderer.h  windows-build.yml
.github/workflows/: main.yml
Fonte/: AudioEngine.cpp  AudioEngine.h  GeometryProcessor.cpp  GeometryProcessor.h  Main.cpp  MainComponent.cpp  MainComponent.h  ScopeRenderer.cpp  WavExporter.cpp  WavExporter.h
